# axum-daim

./: Cargo.toml
src/: config.rs  main.rs  routers.rs
src/config/: center.rs  main_config.rs
src/routers/: administration.rs
src/routers/administration/: apis.rs
src/routers/master_data/: apis.rs  crud.rs
